--- a/css/colorTheme.css
+++ b/css/colorTheme.css
@@ -163,6 +163,94 @@ html {
   padding: 5rem 0;
 }
 
+body {
+  background-color: var(--bg);
+  color: var(--text);
+  font-family: "Roboto", sans-serif;
+  line-height: 1.5;
+}
+
+img {
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+nav {
+  position: sticky;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  top: 0;
+  left: 0;
+  height: 50px;
+  padding: 0 30px;
+  margin: 0;
+  background: var(--primary);
+  color: var(--text);
+}
+
+nav .brand {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+nav .brand img {
+  height: 50px;
+  width: 50px;
+  margin: 2px 15px 0 0;
+  padding: 0;
+}
+
+nav .brand p {
+  color: var(--Tomato);
+  font-size: 40px;
+  font-style: italic;
+  font-family: Georgia, serif;
+  font-weight: 800;
+  padding: 0;
+}
+
+nav ul {
+  display: flex;
+  list-style-type: none;
+  flex-wrap: wrap;
+}
+
+nav li {
+  padding: 0 15px 2px 0;
+}
+
+nav .dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+nav .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: var(--info);
+  min-width: 100px;
+  border-radius: 2px;
+  padding: 5px 5px;
+  z-index: 10;
+}
+
+nav .dropdown:hover .dropdown-content {
+  display: block;
+}
+
+nav a {
+  color: var(--text);
+}
+
+nav a:hover {
+  border-bottom: 2px solid var(--danger);
+}
+
 /* Themes */
 :root {
   --gray-100: #f8f9fa;
