--- a/scss/colorTheme.scss
+++ b/scss/colorTheme.scss
@@ -2,6 +2,84 @@
 @import "config-colorTheme";
 @import "utilities-colorTheme";
 
+body {
+  background-color: var(--bg);
+  color: var(--text);
+  font-family: $font-pop;
+  line-height: 1.5;
+}
+img {
+  width: 100%;
+}
+a {
+  text-decoration: none;
+}
+
+// Navbar
+
+nav {
+  position: sticky;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  top: 0;
+  left: 0;
+  height: 50px;
+  padding: 0 30px;
+  margin: 0;
+  background: var(--primary);
+  color: var(--text);
+  .brand {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    img {
+      height: 50px;
+      width: 50px;
+      margin: 2px 15px 0 0;
+      padding: 0;
+    }
+    p {
+      color: var(--Tomato);
+      font-size: 40px;
+      font-style: italic;
+      font-family: $font-head1;
+      font-weight: 800;
+      padding: 0;
+    }
+  }
+  ul {
+    display: flex;
+    list-style-type: none;
+    flex-wrap: wrap;
+  }
+  li {
+    padding: 0 15px 2px 0;
+  }
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--info);
+    min-width: 100px;
+    border-radius: 2px;
+    // box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    padding: 5px 5px;
+    z-index: 10;
+  }
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  a {
+    color: var(--text);
+  }
+  a:hover {
+    border-bottom: 2px solid var(--danger);
+  }
+}
 /* Themes */
 :root {
   --gray-100: #f8f9fa;
