--- a/scss/colorTheme.scss
+++ b/scss/colorTheme.scss
@@ -80,6 +80,99 @@ nav {
   }
 }
 
+// Showcase-smoke
+.showcase-smoke {
+  margin: 0;
+  padding: 0;
+  height: 50vmin;
+  // width: 100vw;
+  section {
+    margin: 0;
+    padding: 0;
+    height: 50vmin;
+    width: 100vw;
+    background: #000;
+    video {
+      height: 50vmin;
+      width: 100vw;
+      object-fit: cover;
+    }
+    h1 {
+      margin: 0;
+      padding: 0;
+      position: absolute;
+      top: 35vmin;
+      transform: translateY(-33%);
+      height: 50vmin;
+      // width: 100vw;
+      width: 100%;
+      text-align: center;
+      color: #fff;
+      font-size: 7vw;
+      letter-spacing: 0.1rem;
+    }
+    h1 span {
+      margin: 0;
+      padding: 0;
+      font-family: $font-head;
+      font-weight: 800;
+      opacity: 0;
+      display: inline-block;
+      animation: animate 1s linear forwards;
+    }
+    @keyframes animate {
+      0% {
+        opacity: 0;
+        transform: rotateY(90deg);
+        filter: blur(10px);
+      }
+      100% {
+        opacity: 1;
+        transform: rotateY(0deg);
+        filter: blur(0);
+      }
+    }
+    h1 span:nth-child(1) {
+      animation-delay: 1s;
+    }
+    h1 span:nth-child(2) {
+      animation-delay: 2s;
+    }
+    h1 span:nth-child(3) {
+      animation-delay: 2.5s;
+    }
+    h1 span:nth-child(4) {
+      animation-delay: 3s;
+    }
+    h1 span:nth-child(5) {
+      animation-delay: 3.5s;
+    }
+    h1 span:nth-child(6) {
+      animation-delay: 3.75s;
+    }
+    h1 span:nth-child(7) {
+      animation-delay: 4s;
+    }
+    h1 span:nth-child(8) {
+      animation-delay: 4.5s;
+    }
+    h1 span:nth-child(9) {
+      animation-delay: 5s;
+    }
+  }
+  section:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 50vmin;
+    width: 100vw;
+    background: linear-gradient(to right, #f00, #f00, #0f0, #0ff, #ff0, #0ff);
+    mix-blend-mode: color;
+    pointer-events: none;
+  }
+}
+
 // Main Content
 .main-content {
   margin: 10px 0 20px 0;
@@ -147,6 +240,7 @@ nav {
     }
   }
 }
+
 /* Themes */
 :root {
   --gray-100: #f8f9fa;
